# super-agent

./: README.md  docker-compose.yml  pom.xml
ai-example/ai-example-rag/: pom.xml
ai-example/ai-example-spring-ai/: pom.xml
ai-example/ai-example-spring-ai-alibaba/: pom.xml
ai-example/ai-example-spring-ai-mcp/: pom.xml
sql/Mysql/: O2-O8-RAG完整测试知识路由初始化脚本.sql  O7_RAPTOR_dataset_scope_alter_mysql.sql  O8-证据身份字段增量脚本-2026-07-05.sql  create_table_mysql.sql  清空表数据.sql
super-agent-business/: pom.xml
super-agent-common/: pom.xml
super-agent-id-generator-framework/: pom.xml
super-agent-rag-tools/: Dockerfile  README.md  pyproject.toml  rag-tools.yaml  requirements.txt
super-agent-rag-tools/prompt/: raptor-summary-system.txt  raptor-summary-user.txt
super-agent-rag-tools/rag_tools/: __init__.py  citation_repair.py  config.py  document_parser.py  graph_extract.py  main.py  prompt_loader.py  raptor_build.py  semantic_model.py
super-agent-rag-tools/rag_tools/schemas/: __init__.py  citation_repair.py  document_parse.py  graph_extract.py  raptor_build.py  rerank.py
super-agent-rag-tools/tests/: test_document_parser_providers.py  test_document_parser_tables.py  test_graph_extract.py  test_raptor_build_concurrency.py
super-agent-redis-tool-framework/: pom.xml
super-agent-redisson-framework/: pom.xml
vue/: components.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
vue/src/: App.vue  main.js
需要的例子演示/: O6多社区排序-客户数据访问控制别名B.md  O6多社区排序-客户数据访问控制规范A.md  O6多社区排序-生产发布回滚别名B.md  O6多社区排序-生产发布回滚规范A.md  O6跨文档图谱-审计系统别名说明B.md  O6跨文档图谱-审计证据规范A.md
(+788 files in other folders)
