[project]
name = "super-agent-rag-tools"
version = "0.1.0"
description = "Python RAG tool service for super-agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sentence-transformers==3.3.1",
    "networkx==3.6.1",
    "alibabacloud-docmind-api20220711==1.4.14",
    "alibabacloud-credentials==1.0.9",
    "PyMuPDF==1.24.14",
    "Pillow==12.2.0"
]

[tool.uvicorn]
factory = false
